--- a/src/pages/krato/krato.html
+++ b/src/pages/krato/krato.html
@@ -16,8 +16,7 @@
         {{local.sector}}
       </div>
       <div class="local-ranking" item-right>
-      Ranking:
-      <ion-icon  name="star" *ngFor="let i of getNumber(local.rating)"></ion-icon>
+      <ion-icon  name="star" *ngFor="let i of getNumber(local.rating)"></ion-icon><ion-icon  name="star-outline" *ngFor="let i of getNumber(5 - local.rating)"></ion-icon>
       </div>
     </button>
   </ion-list>
