--- a/src/pages/item-details/item-details.html
+++ b/src/pages/item-details/item-details.html
@@ -9,8 +9,9 @@
 
 <ion-content>
  <div *ngIf="selectedItem" class="selection">
+    logo: <ion-icon name="{{selectedItem.logo}}"></ion-icon>
+    <br>
     <b>{{selectedItem.nombre}}</b>
-    <ion-icon name="{{selectedItem.logo}}"></ion-icon>
     <div>
       Sector: <b>{{selectedItem.sector}}</b><br>
       Rating: <ion-icon  name="star" *ngFor="let i of getNumber(selectedItem.rating)"></ion-icon><ion-icon  name="star-outline" *ngFor="let i of getNumber(5 - selectedItem.rating)"></ion-icon>
