--- a/src/pages/krato/krato.html
+++ b/src/pages/krato/krato.html
@@ -8,9 +8,12 @@
 </ion-header>
 
 <ion-content>
+
+<ion-searchbar [(ngModel)]="termino" (ionInput)="setFilteredItems()"></ion-searchbar>
+
   <ion-list>
     <button ion-item *ngFor="let local of comercios_json" (click)="itemTapped($event, local)">
-      <ion-icon name="{{local.logo}}" item-left></ion-icon>
+      <!-- <ion-icon name="{{local.logo}}" item-left></ion-icon> -->
       <b>{{local.nombre}}</b>
       <br>
         {{local.sector}}
