--- a/src/pages/item-details/item-details.html
+++ b/src/pages/item-details/item-details.html
@@ -7,7 +7,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content style="background-color: #ddd;">
   <ion-row>
   <ion-col width-50 offset-25>
   <ion-card *ngIf="selectedItem" class="selection">
